fix: scrolling of overlap section (#63)

--- a/styles/includes/_overlap.scss
+++ b/styles/includes/_overlap.scss
@@ -1,7 +1,7 @@
 @import "../core/mixins";
 
 .overlap {
-	overflow-x: hidden;
+	overflow: hidden;
 	position: relative;
 
 	&::after {
